--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/revolver.png
+    - assets/img/revolver.png
+    - assets/img/portada.png
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
